force-app/main/default/objects/Administrative_Request__c/Administrative_Request__c.object-meta.xml
<CustomObject>
    <label>Administrative Request</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Administrative Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>