force-app/main/default/objects/Administrative_Request__c/fields/Activation_Status_Is_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Activation_Status_Is_Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activation Status Is Canceled</label>
    <type>Checkbox</type>
</CustomField>