force-app/main/default/objects/Administrative_Request__c/fields/Canceled__c.field-meta.xml
<CustomField>
    <fullName>Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates order products are canceled and accounting is notified</description>
    <inlineHelpText>Indicates if admin has canceled order product</inlineHelpText>
    <label>Canceled</label>
    <type>Checkbox</type>
</CustomField>