force-app/main/default/objects/Administrative_Request__c/fields/Canceled_Order__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canceled Order</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Canceled Order must belong to requested Account</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Order.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Administrative Requests (Canceled Order)</relationshipLabel>
    <relationshipName>Accounting_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>