force-app/main/default/objects/Administrative_Request__c/fields/Deposit_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Confirmed</label>
    <type>Checkbox</type>
</CustomField>