force-app/main/default/objects/Administrative_Request__c/fields/EFT_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>EFT_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EFT Payment Method</label>
    <type>Checkbox</type>
</CustomField>