force-app/main/default/objects/Administrative_Request__c/fields/Goal_Approved__c.field-meta.xml
<CustomField>
    <fullName>Goal_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goal Approved</label>
    <type>Checkbox</type>
</CustomField>