force-app/main/default/objects/Administrative_Request__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Invoice must belong to requested Account</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Invoice__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipName>Accounting_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>