force-app/main/default/objects/Administrative_Request__c/fields/Invoice_Contact_Updated__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Contact Updated</label>
    <type>Checkbox</type>
</CustomField>