force-app/main/default/objects/Administrative_Request__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Order Product must belong to requested Account</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>OrderItem.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OrderItem</referenceTo>
    <relationshipName>Accounting_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>