force-app/main/default/objects/Administrative_Request__c/fields/Queue_Type_Default__c.field-meta.xml
<CustomField>
    <fullName>Queue_Type_Default__c</fullName>
    <formula>IF(
CONTAINS(RecordType.DeveloperName, &apos;_SalesGoal&apos;),
&apos;00G4p000001j2xn&apos;, /*Sales*/
IF(
CONTAINS(RecordType.DeveloperName, &apos;_LMSSub&apos;),
&apos;00G4p000001j3Bp&apos;, /*LMS*/
IF(
CONTAINS(RecordType.DeveloperName, &apos;_OrderItem&apos;),
&apos;00G4p000000kozS&apos;, /*Admin*/
&apos;00G4p000000oi1Z&apos; /*Accounting*/
)
)
)</formula>
    <label>Queue Type Default</label>
    <type>Text</type>
</CustomField>