force-app/main/default/objects/Administrative_Request__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Quote must belong to requested Account</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>SBQQ__Quote__c.SBQQ__Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipName>Accounting_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>