force-app/main/default/objects/Administrative_Request__c/fields/Refund_or_Credit__c.field-meta.xml
<CustomField>
    <fullName>Refund_or_Credit__c</fullName>
    <inlineHelpText>Determines if the credit generated will be used as a refund or credit towards future sale</inlineHelpText>
    <label>Refund or Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund</fullName>
                <default>true</default>
                <label>Refund</label>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>