force-app/main/default/objects/Administrative_Request__c/fields/Requested_Status__c.field-meta.xml
<CustomField>
    <fullName>Requested_Status__c</fullName>
    <label>Requested Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__OrderProductStatus</valueSetName>
    </valueSet>
</CustomField>