force-app/main/default/objects/Administrative_Request__c/fields/Task_Type_Default__c.field-meta.xml
<CustomField>
    <fullName>Task_Type_Default__c</fullName>
    <formula>IF( 
OR(
CONTAINS(RecordType.DeveloperName, &apos;_OrderItem&apos;), 
CONTAINS(RecordType.DeveloperName, &apos;_SalesGoal&apos;),
CONTAINS(RecordType.DeveloperName, &apos;_LMSSub&apos;)
),
&apos;Admin&apos;,
&apos;Accounting&apos;
)</formula>
    <label>Task Type Default</label>
    <type>Text</type>
</CustomField>