force-app/main/default/objects/Administrative_Request__c/recordTypes/Account_Payment_Term_Account.recordType-meta.xml
<RecordType>
    <fullName>Account_Payment_Term_Account</fullName>
    <active>true</active>
    <description>Requesting adjustment to an accounts payment terms</description>
    <label>Account Payment Term</label>
</RecordType>