force-app/main/default/objects/Administrative_Request__c/recordTypes/Credit_Invoice_WriteOffs_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Credit_Invoice_WriteOffs_Invoice</fullName>
    <active>true</active>
    <description>Requesting an invoice adjustment</description>
    <label>Credit Invoice &amp; Write-Offs</label>
</RecordType>