force-app/main/default/objects/Administrative_Request__c/recordTypes/Credit_Quote_Quote.recordType-meta.xml
<RecordType>
    <fullName>Credit_Quote_Quote</fullName>
    <active>true</active>
    <description>Requesting a quote have a credit applied</description>
    <label>Credit Quote</label>
</RecordType>