force-app/main/default/objects/Administrative_Request__c/recordTypes/DL2_Bundle_Unassign_OrderItem.recordType-meta.xml
<RecordType>
    <fullName>DL2_Bundle_Unassign_OrderItem</fullName>
    <active>true</active>
    <description>Used for DL2 Bundle Line Items to be unassigned to the SA</description>
    <label>DL2 Bundle Unassign</label>
</RecordType>