force-app/main/default/objects/Administrative_Request__c/recordTypes/Frozen_Account_Status_Account.recordType-meta.xml
<RecordType>
    <fullName>Frozen_Account_Status_Account</fullName>
    <active>true</active>
    <description>Requesting a frozen account be reviewed and unfrozen</description>
    <label>Frozen Account Status</label>
</RecordType>