force-app/main/default/objects/Administrative_Request__c/recordTypes/JHSC_Bundle_Contact_Swap_OrderItem.recordType-meta.xml
<RecordType>
    <fullName>JHSC_Bundle_Contact_Swap_OrderItem</fullName>
    <active>true</active>
    <description>Indicates a contact swap for a JHSC Bundle</description>
    <label>JHSC Bundle Contact Swap</label>
</RecordType>