force-app/main/default/objects/Administrative_Request__c/recordTypes/JHSC_Bundle_Credit_Or_Refund_OrderItem.recordType-meta.xml
<RecordType>
    <fullName>JHSC_Bundle_Credit_Or_Refund_OrderItem</fullName>
    <active>true</active>
    <description>To indicate JHSC Bundle credit needs to be generated</description>
    <label>JHSC Bundle Credit Or Refund</label>
</RecordType>