force-app/main/default/objects/Administrative_Request__c/recordTypes/LMS_Refund_Invoice.recordType-meta.xml
<RecordType>
    <fullName>LMS_Refund_Invoice</fullName>
    <active>true</active>
    <description>Used for processing LMS refunds</description>
    <label>LMS Refund</label>
</RecordType>