force-app/main/default/objects/Administrative_Request__c/recordTypes/LMS_Subscription_Price_Override_LMSSub.recordType-meta.xml
<RecordType>
    <fullName>LMS_Subscription_Price_Override_LMSSub</fullName>
    <active>true</active>
    <description>Used for requesting LMS Subscription seat pricing adjustment</description>
    <label>LMS Subscription Price Override</label>
</RecordType>