force-app/main/default/objects/Administrative_Request__c/recordTypes/Order_Refund_Order.recordType-meta.xml
<RecordType>
    <fullName>Order_Refund_Order</fullName>
    <active>true</active>
    <description>Requesting for an order to be refunded</description>
    <label>Order Refund</label>
</RecordType>