force-app/main/default/objects/Administrative_Request__c/recordTypes/Quote_Payment_Term_Invoice_Quote.recordType-meta.xml
<RecordType>
    <fullName>Quote_Payment_Term_Invoice_Quote</fullName>
    <active>true</active>
    <description>Requesting that a quote be paid by invoice</description>
    <label>Quote Payment Term (Invoice)</label>
</RecordType>