force-app/main/default/objects/Administrative_Request__c/recordTypes/Quote_Payment_Term_PPE_Quote.recordType-meta.xml
<RecordType>
    <fullName>Quote_Payment_Term_PPE_Quote</fullName>
    <active>true</active>
    <description>Requesting a change of payment term for PPE quotes</description>
    <label>Quote Payment Term (PPE)</label>
</RecordType>