force-app/main/default/objects/Administrative_Request__c/recordTypes/Sales_Goal_Request_SalesGoal.recordType-meta.xml
<RecordType>
    <fullName>Sales_Goal_Request_SalesGoal</fullName>
    <active>true</active>
    <description>Process Fiscal Year Sales Goal Requests</description>
    <label>Sales Goal Request</label>
</RecordType>