force-app/main/default/objects/Administrative_Request__c/recordTypes/Status_Change_OrderItem.recordType-meta.xml
<RecordType>
    <fullName>Status_Change_OrderItem</fullName>
    <active>true</active>
    <description>Requesting a change in order product status</description>
    <label>Status Change</label>
</RecordType>