force-app/main/default/objects/Administrative_Request__c/validationRules/Block_Bundle_Credit_on_OL1.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Bundle_Credit_on_OL1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISNEW(),
 Order_Product__r.Product2.ProductCode = &apos;OL-JHSCI&apos;
)</errorConditionFormula>
    <errorMessage>Create the accounting request on the associated DL2 line in the bundle!</errorMessage>
</ValidationRule>