force-app/main/default/objects/Administrative_Request__c/validationRules/Can_Only_Make_LMS_Refund_On_LMS_Invoices.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Only_Make_LMS_Refund_On_LMS_Invoices</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
CONTAINS(RecordType.DeveloperName, &apos;LMS_Refund_Invoice&apos;),
 Invoice__r.From_LMS__c = false
)</errorConditionFormula>
    <errorMessage>Can only make LMS Refund request on LMS Invoices!</errorMessage>
</ValidationRule>