force-app/main/default/objects/Administrative_Request__c/validationRules/Cannot_Cancel_Invoiced_OrderProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Cancel_Invoiced_OrderProduct</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 CONTAINS(RecordType.DeveloperName, &apos;Status_Change&apos;),
 NOT(ISBLANK(Order_Product__r.Invoice__c))
)

/*
Allow accounting to create on LMS order products
*/</errorConditionFormula>
    <errorMessage>Cannot create a status change on an order product that is already invoiced!</errorMessage>
</ValidationRule>