force-app/main/default/objects/Administrative_Request__c/validationRules/Cannot_Change_Sales_Goal.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Sales_Goal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(Approved__c),
 CONTAINS(RecordType.DeveloperName, &apos;_SalesGoal&apos;),
 $UserRole.Name != &apos;System Admin&apos;
)</errorConditionFormula>
    <errorMessage>You do not have permission to change approval on sales goals!</errorMessage>
</ValidationRule>