force-app/main/default/objects/Administrative_Request__c/validationRules/Cannot_Create_Bundle_Requests.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Create_Bundle_Requests</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
CONTAINS(RecordType.DeveloperName, &apos;DL2_Bundle_Unassign&apos;),
CONTAINS(RecordType.DeveloperName, &apos;JHSC_Bundle_Contact_Swap&apos;),
CONTAINS(RecordType.DeveloperName, &apos;JHSC_Bundle_Credit_Or_Refund&apos;)
),
 $UserRole.DeveloperName = &apos;Sales_Rep&apos;
)</errorConditionFormula>
    <errorMessage>You cannot create a JHSC Bundle request! Contact CSS to process request</errorMessage>
</ValidationRule>