force-app/main/default/objects/Administrative_Request__c/validationRules/Limit_to_DL2_in_a_bundle.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_to_DL2_in_a_bundle</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(
 CONTAINS(RecordType.DeveloperName, &apos;DL2_Bundle_Unassign&apos;),
 CONTAINS(RecordType.DeveloperName, &apos;JHSC_Bundle_Contact_Swap&apos;),
 CONTAINS(RecordType.DeveloperName, &apos;JHSC_Bundle_Credit_Or_Refund&apos;)
 ),
 OR(
 ISBLANK(Order_Product__r.SBQQ__RequiredBy__c),
 Order_Product__r.SBQQ__RequiredBy__r.Product2.ProductCode != &apos;OL-JHSCI&apos;,
 Order_Product__r.Product2.ProductCode != &apos;DLIH-JHSCII&apos;
 )
)</errorConditionFormula>
    <errorMessage>Can only use Bundle Requests for DL2 courses sold as a bundle!</errorMessage>
</ValidationRule>