force-app/main/default/objects/Administrative_Request__c/validationRules/Only_Admin_Can_Set_Canceled.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Admin_Can_Set_Canceled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Canceled__c = True,
 ISCHANGED(Canceled__c),
 CONTAINS(RecordType.DeveloperName, &apos;JHSC_Bundle_Credit_Or_Refund&apos;), 
 $UserRole.Name != &apos;System Admin&apos;
)</errorConditionFormula>
    <errorMessage>You do not have permission to set canceled!</errorMessage>
</ValidationRule>