force-app/main/default/objects/Administrative_Request__c/validationRules/Requested_Sales_Goal.validationRule-meta.xml
<ValidationRule>
    <fullName>Requested_Sales_Goal</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
CONTAINS(RecordType.DeveloperName, &apos;_SalesGoal&apos;),
 Requested_Sales_Goal__c = 0
)</errorConditionFormula>
    <errorMessage>Requested Sales Goal must be greater than 0!</errorMessage>
</ValidationRule>