force-app/main/default/objects/Administrative_Request__c/listViews/All_Requests.listView-meta.xml
<ListView>
    <fullName>All_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Notes__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Requests</label>
</ListView>